[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Audio/Audio.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Courgette/Courgette-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/audio/ambience/night.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/ambience/day.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/ambience/rain.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 1
outline_color = Color( 0.564706, 0.447059, 0.101961, 1 )
font_data = ExtResource( 2 )

[node name="Audio" type="Node2D"]
script = ExtResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="MusicNowPlayingLabel" type="Label" parent="."]
margin_right = 425.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.780392, 0.639216, 0.231373, 1 )
text = "Now playing: Midnight in the garden"

[node name="Tween" type="Tween" parent="."]

[node name="AmbienceDay" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Ambience"

[node name="AmbienceNight" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Ambience"

[node name="AmbienceRain" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Ambience"

[node name="AmbienceRainTween" type="Tween" parent="."]

[node name="DayTimer" type="Timer" parent="."]
[connection signal="timeout" from="DayTimer" to="." method="_on_DayTimer_timeout"]
